syntax = "proto3";

package retrom;

import "google/protobuf/timestamp.proto";

message GameFile {
  reserved 2, 5;

  int32 id = 1;
  int64 byte_size = 3;
  string path = 4;
  int32 game_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  optional google.protobuf.Timestamp deleted_at = 9;
  bool is_deleted = 10;
}

message NewGameFile {
  int64 byte_size = 1;
  string path = 2;
  optional int32 game_id = 3;
  optional google.protobuf.Timestamp created_at = 4;
  optional google.protobuf.Timestamp updated_at = 5;
  optional google.protobuf.Timestamp deleted_at = 6;
  bool is_deleted = 7;
}

message UpdatedGameFile {
  int32 id = 1;
  optional int64 byte_size = 2;
  optional string path = 3;
  optional int32 game_id = 4;
  optional google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp updated_at = 6;
  optional google.protobuf.Timestamp deleted_at = 7;
  optional bool is_deleted = 8;
}
